# cowork

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  agent.py  alerts.py  config.py  database.py  main.py  mcp_create_bridge.py  mcp_lookup_bridge.py  mcp_sprint_bridge.py  roles.py  security.py  seed_user.py  worker.py
app/static/: app.js  index.html  style.css
deploy/: cowork.service
tests/: test_agent.py  test_alerts.py  test_api.py  test_ci_contract.py  test_container_contract.py  test_login_limiter.py  test_mcp_create_bridge.py  test_security.py  test_seed_user.py  test_ui_contract.py  test_worker.py
