[project]
name = "pinlog-cowork"
version = "0.1.0"
description = "할 일 올리기 — natural-language Jira Task creator"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.2",
  "starlette==1.3.1",
  "uvicorn[standard]==0.35.0",
  "bcrypt==4.3.0",
]

[project.optional-dependencies]
test = [
  "httpx2==2.7.0",
  "pytest==9.1.1",
  "ruff==0.12.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]
